--- a/app.json
+++ b/app.json
@@ -25,6 +25,10 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "assetBundlePatterns": [
+      "**/*",
+      "assets/fonts/*"
+    ],
     "plugins": [
       "expo-router",
       [
